--- a/ExercisePages/Exercise01.cshtml
+++ b/ExercisePages/Exercise01.cshtml
@@ -11,24 +11,24 @@
 }
 
 <form>
-    <div class="row">
-        <div class="offset-1">
-            <label id="label1" for="dataentry">Customer Name:</label>&nbsp;&nbsp;
-            <input type="text" id="dataentry" name="dataentry"
-                   value="@myname" />
+    <div class="column">
+        <div class="row">
+            <div class="offset-1">
+                <label id="label1" for="dataentry">Customer Name:</label>&nbsp;&nbsp;
+                <input type="text" id="dataentry" name="dataentry"
+                       value="@myname" />
+            </div>
+            <div class="offset-1">
+                <label id="meal-items-label"><strong>Choice your meal items</strong></label><br/>
+                <input type="checkbox" id="meal-items" name="meal-items" value="steak"
+                       @(Array.IndexOf(choices.Split(','), "Steak") >= 0 ? "checked" : "") />Steak<br />
+                <input type="checkbox" id="meal-items" name="meal-items" value="seafood"
+                       @(Array.IndexOf(choices.Split(','), "Seafood") >= 0 ? "checked" : "") />Seafood<br />
+                <input type="checkbox" id="meal-items" name="meal-items" value="vegtables"
+                       @(Array.IndexOf(choices.Split(','), "Vegtables") >= 0 ? "checked" : "") />Vegtables<br /><br />
+            </div>
         </div>
-        <div class="col">
-            <label id="meal-items-label"><strong>Choice your meal items</strong></label>
-            <input type="checkbox" id="meal-items" name="meal-items" value="steak"
-                   @(Array.IndexOf(choices.Split(','), "Steak") >= 0? "checked" : "") />Steak<br />
-            <input type="checkbox" id="meal-items" name="meal-items" value="seafood"
-                   @(Array.IndexOf(choices.Split(','), "Seafood") >= 0? "checked" : "") />Seafood<br />
-            <input type="checkbox" id="meal-items" name="meal-items" value="vegtables"
-                   @(Array.IndexOf(choices.Split(','), "Vegtables") >= 0? "checked" : "") />Vegtables<br />
-        </div">
-        </div>
-    <div class="row">
-        <div class="offset-1">
+        <div class="row offset-1">
             <button type="submit" id="theButton" name="theButton"
                     value="submit" class="btn btn-primary">
                 Submit
