--- a/WebApp/ExercisePages/Exercise01.cshtml
+++ b/WebApp/ExercisePages/Exercise01.cshtml
@@ -38,7 +38,7 @@
         {
             //Name and choices
             <p>
-                @myname, likes:
+                @myname, I see that you have the following meal entries:
                 <ul>
                     @foreach(var menuItem in choices.Split(','))
                     {
