add to logic and redirect

--- a/WebApp/ExercisePages/Exercise02_A.cshtml
+++ b/WebApp/ExercisePages/Exercise02_A.cshtml
@@ -32,8 +32,12 @@
         }
         else
         {
-
+            Response.Redirect("Exercise02_B?cid=" + searchByNameResults);
         }
+    }
+    else
+    {
+        artistName = "";
     }
 }
 
