--- a/WebApp/ExercisePages/Exercise02_A.cshtml
+++ b/WebApp/ExercisePages/Exercise02_A.cshtml
@@ -32,7 +32,7 @@
         }
         else
         {
-            Response.Redirect("Exercise02_B?cid=" + searchByNameResults);
+            Response.Redirect("Exercise02_B?artistName=" + artistName);
         }
     }
     else
