--- a/WebApp/ExercisePages/Exercise02_B.cshtml
+++ b/WebApp/ExercisePages/Exercise02_B.cshtml
@@ -31,7 +31,7 @@
         Response.Redirect("Exercise02_C?artistId=" + artistId);
     }
 }
-
+<p>@artistName</p>
 <form id="theform" method="post">
     <div class="row">
         <div class="offset-1">
