--- a/WebApp/ExercisePages/Exercise02_B.cshtml
+++ b/WebApp/ExercisePages/Exercise02_B.cshtml
@@ -17,7 +17,9 @@
     var searchByArtistNameQuery = @"SELECT ArtistId, Name FROM Artists WHERE Name like '%' + @0 + '%' ORDER BY Name";
     var searchByArtistNameResult = db.Query(searchByArtistNameQuery, artistName);
 
-    //TODO Check that a result was returned
+
+    var searchAlbumsByArtistIdQuery = @"SELECT AlbumId FROM Albums WHERE ArtistId = @0";
+    var searchAlbumsByArtistIdResult = db.Query(searchAlbumsByArtistIdQuery, artistId);
 }
 
 @section banner {
@@ -28,7 +30,14 @@
 {
     if (theButton.Equals("submit", StringComparison.OrdinalIgnoreCase))
     {
-        Response.Redirect("Exercise02_C?artistId=" + artistId);
+        if (searchAlbumsByArtistIdResult.Count() == 0)
+        {
+            <p style="color:firebrick">@artistName doesn't have any Albums</p>
+        }
+        else
+        {
+            Response.Redirect("Exercise02_C?artistId=" + artistId);
+        }
     }
 }
 
