--- a/WebApp/ExercisePages/Exercise02_C.cshtml
+++ b/WebApp/ExercisePages/Exercise02_C.cshtml
@@ -2,9 +2,39 @@
     Layout = "~/_Layout.cshtml";
     Page.Title = string.Format("Razor - {0}", "Exercise 02");
 
+    var artistId = Request.QueryString["artistId"];
 
+    if (string.IsNullOrEmpty(artistId))
+    {
+        Response.Redirect("Exercise02_A.cshtml");
+    }
+
+    var db = Database.Open("CHINOOK");
+    var searchArtistsByArtistIdQuery = @"SELECT Name FROM Artists WHERE ArtistId = @0";
+    var searchAlbumsByArtistIdQuery = @"SELECT AlbumId, Title, ReleaseYear, ReleaseLabel FROM Albums WHERE ArtistId = @0";
+    var artist = db.QuerySingle(searchArtistsByArtistIdQuery, artistId);
+    var albums = db.Query(searchAlbumsByArtistIdQuery, artistId);
+
+    var gridinstance = new WebGrid(albums);
 }
 
 @section banner {
     <h1>@Page.Title</h1>
 }
+
+<div class="offset-1">
+    <h3>Artist: @artist</h3>
+    <div class="col-11">
+        @gridinstance.GetHtml(
+            tableStyle: "table table-striped table-bordered table-hover",
+            mode: WebGridPagerModes.All,
+            firstText: "Start",
+            lastText: "End",
+            columns: gridinstance.Columns(
+               gridinstance.Column(columnName: "AlbumId", header: "Album ID"),
+               gridinstance.Column(columnName: "Title", header: "Title"),
+               gridinstance.Column(columnName: "ReleaseYear", header: "Year"),
+               gridinstance.Column(columnName: "ReleaseLabel", header: "Label")
+))
+    </div>
+</div>
