change column names

--- a/WebApp/ExercisePages/Exercise02_C.cshtml
+++ b/WebApp/ExercisePages/Exercise02_C.cshtml
@@ -31,7 +31,7 @@
             firstText: "Start",
             lastText: "End",
             columns: gridinstance.Columns(
-               gridinstance.Column(columnName: "AlbumId", header: "Album ID"),
+               gridinstance.Column(columnName: "AlbumId", header: "ID"),
                gridinstance.Column(columnName: "Title", header: "Title"),
                gridinstance.Column(columnName: "ReleaseYear", header: "Year"),
                gridinstance.Column(columnName: "ReleaseLabel", header: "Label")
